--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
   </head>
   <body>
     <header>
-      <h1>La mama de la mama de la mama</h1>
+      <h1>Estudios:</h1>
     </header>
-    <main></main>
+    <main>
+      <ol>
+        <li>Titulo de bachillerato cientifico</li>
+        <li>Titulo de lengua inglesa C1</li>
+      </ol>
+    </main>
     <footer></footer>
   </body>
 </html>
